--- a/9-projekt-portfolio/index.html
+++ b/9-projekt-portfolio/index.html
@@ -56,6 +56,7 @@
 
     <!--Portfolio-->
     <section id="portfolio" class="portfolio container">
+        <div class= "container">
         <h2 class="title">PORTFOLIO</h2>
         <div class="hline-portfolio"></div>
 
@@ -109,6 +110,7 @@
                 <h3>Car</h3>
             </a>
         </div>
+        </div>  
     </section>
 
     <!--Contact-->
