--- a/1-responsywna-sekcja-bootstrap/index.html
+++ b/1-responsywna-sekcja-bootstrap/index.html
@@ -21,7 +21,7 @@
 
 
 
-    <section class="container col-12 col-sm-6 col-md-4 d-flex align-items-center justify-content-center flex-column">
+    <section class="container">
         <div class="row">
             <div class="col-12">
                 <h1 class="text-center">My Skills</h1>
@@ -53,9 +53,9 @@
                 </span>
                 <h2>JavaScript</h2>
             </div>
-        </div>
+            
 
-        <div class="row">
+
             <div class="col-12 col-sm-6 col-md-4 d-flex align-items-center justify-content-center flex-column">
                 <span class="fa-stack fa-6x">
                     <i class="fa fa-circle fa-stack-2x icon-background"></i>
